; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-strv.c_test_strv_skip_one.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-strv.c_test_strv_skip_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i64, i8**)* @test_strv_skip_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_strv_skip_one(i8** %0, i64 %1, i8** %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8**, align 8
  store i8** %0, i8*** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8** %2, i8*** %6, align 8
  %7 = load i8**, i8*** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i8** @strv_skip(i8** %7, i64 %8)
  store i8** %9, i8*** %4, align 8
  %10 = load i8**, i8*** %4, align 8
  %11 = load i8**, i8*** %6, align 8
  %12 = call i32 @strv_equal(i8** %10, i8** %11)
  %13 = call i32 @assert_se(i32 %12)
  ret void
}

declare dso_local i8** @strv_skip(i8**, i64) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @strv_equal(i8**, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
